Added Tomato Dal recipe

--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
     <h1>ODIN Recipes</h1>
 
     <a href="recipes/chickpea_and_spinach_fritters.html">Chickpea and Spinach fritters</a>
+    <p></p>
+    <a href="recipes/tomato_pappu.html">Tomato Pappu</a>
 </body>
